changed contact -> skills

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section {
     background: linear-gradient(to bottom, #ff9800, #ffc107);
 }
 
-#contact {
+#skills {
     background: linear-gradient(to bottom, #00bcd4, #4dd0e1);
 }
 
